tests/tooling/fixtures/native/recovery/negative/negative_duplicate_extern_qualifier.objc3
// Negative fixture: declaration qualifiers reject duplicate `extern` entries.
// Expected diagnostic code(s): O3P100.
module NegativeDuplicateExternQualifier;

extern extern fn add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return add(1, 2);
}
